# rust-tcp

./: Cargo.toml  README.md
src/: client.rs  client_main.rs  constants.rs  lib.rs  message.rs  message_reader.rs  server.rs  server_main.rs
src/bins/: client.rs  server.rs
