[package]
name = "rust-tcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_tcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bins/server.rs"

[[bin]]
name = "client"
path = "src/bins/client.rs"

[dependencies]
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"] }
